@@ -29,6 +29,46 @@ jar {
     }
 }
 
+// We get the launcher here, so we can use the same JDK for running jlink,
+// as is used for compiling the program.
+def launcher = javaToolchains.launcherFor {
+    languageVersion = java.toolchain.languageVersion
+}
+def javaHome = launcher.map { it.metadata.installationPath }
+
+// The jlink utility is used to create a "Java Runtime Image", essentially a mini-JDK/JRE
+// that contains only the modules of Java that the program uses.
+// By depending on the "Java Runtime Image", developers can write in modern Java
+// (previously, the Randomizer was locked to Java 8 since that's the newest version that gets
+// official Oracle JREs, and low-tech end users WILL download from the "download Java" page),
+// and end users will not have to download any JRE at all!
+
+// The jdeps utility is used to figure out which Java modules the program uses. No code for it yet.
+// TODO: write jdeps code
+
+// The jlink task currently doesn't have a way of checking if it is "UP-TO-DATE", beyond checking
+// if a "java-runtime-image" directory already exists. As the "Java Runtime Image" could become
+// outdated, whenever a new dependency is added or the Randomizer's own code starts relying on
+// additional Java modules, every now and again jdeps must be ran to confirm the list of modules
+// is conclusive. If it isn't, the module list must be updated and the "java-runtime-image" dir
+// deleted.
+// TODO: figure out how often "every now and again" is
+tasks.register('jlink', Exec) {
+    def jlinkPath = 'bin/jlink'
+    def outputDir = layout.buildDirectory.dir('java-runtime-image')
+    def modules = 'java.base,java.desktop,java.logging'
+
+    onlyIf {
+        !outputDir.get().asFile.exists()
+    }
+
+    executable = javaHome.map { it.file(jlinkPath).asFile.absolutePath }.get()
+    args = [
+            '--add-modules', modules,
+            '--output', outputDir.get().asFile.absolutePath
+    ]
+}
+
 tasks.register('clearReleaseDir', Delete) {
     delete 'build/target'
 }
@@ -36,6 +76,7 @@ tasks.register('clearReleaseDir', Delete) {
 tasks.register('moveIntoReleaseDir', Copy) {
     dependsOn 'jar'
     dependsOn 'clearReleaseDir'
+    dependsOn 'jlink'
 
     from('src/main/resources') {
         exclude 'data/players_unused'
@@ -43,6 +84,9 @@ tasks.register('moveIntoReleaseDir', Copy) {
     }
     from 'src/main/launcher'
     from 'build/libs'
+    from('build/java-runtime-image') {
+        into 'java'
+    }
 
     into 'build/target'
 }
@@ -65,3 +109,4 @@ tasks.register('relaunchUnix', Exec) {
     workingDir 'build/target'
     commandLine 'bash', './launcher_UNIX.sh'
 }
+
